[gd_scene load_steps=5 format=3 uid="uid://5spn4s4kiym4"]

[ext_resource type="Script" uid="uid://cped0pqk18mti" path="res://scripts/player.gd" id="1_3vyb7"]
[ext_resource type="Texture2D" uid="uid://wfkqqurk8ik5" path="res://icon.svg" id="2_g2els"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2els"]
size = Vector2(138, 126)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qhqgy"]
size = Vector2(191, 171)

[node name="Player" type="CharacterBody2D" groups=["players"]]
script = ExtResource("1_3vyb7")

[node name="PlayerSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_g2els")

[node name="PlayerCollider" type="CollisionShape2D" parent="."]
position = Vector2(1, -1)
shape = SubResource("RectangleShape2D_g2els")

[node name="PlayerArea" type="Area2D" parent="."]

[node name="PlayerColliderArea" type="CollisionShape2D" parent="PlayerArea"]
position = Vector2(-2.5, -2.5)
shape = SubResource("RectangleShape2D_qhqgy")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_top = -100.0
offset_right = 4.0
offset_bottom = -73.0

[node name="StaminaMessage" type="Label" parent="."]
offset_left = -50.0
offset_top = -120.0
offset_right = 59.0
offset_bottom = -97.0
text = "Beni Sırtına Al"
horizontal_alignment = 1
vertical_alignment = 1
